--- a/threeCosmicDonut/package.json
+++ b/threeCosmicDonut/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "project-1",
+  "homepage": "https://not-a-caveman.github.io/Portfolio/threeCosmicDonut/",
+  "name": "threecosmicdonut",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
